I will fix the line breaks in the instructions section.

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,9 +124,6 @@ body {
     position: relative;
     color: #5d4e37;
     line-height: 1.6;
-    text-align: justify;
-    display: flex;
-    flex-direction: column;
 }
 
 .instructions-list li::before {
